--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -11,11 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "prisma": "^5.15.0"
   }
 }
