"Updated .gitignore file to ignore additional files and directories"

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
 /BackEnd/node_modules
-/FrontEnd/node_modules
 /BackEnd/.env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+/FrontEnd/node_modules
+/FrontEnd/dist
+/FrontEnd/dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
